--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ master, test ]
   pull_request:
-    branches: [ master, test ]
+    branches: [ master ]
 
 jobs:
   build:
