enabled facebook login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.url=jdbc:postgresql://localhost:5432/nver
 spring.flyway.user=root
 spring.flyway.password=root
+
+spring.security.oauth2.client.registration.facebook.client-id=255123762534595
+spring.security.oauth2.client.registration.facebook.client-secret=6c073245156ac38d8a21cf4252425ea1
+spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/api/{action}/oauth2/code/{registrationId}
