added sorting and pagination for products, created api tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.security.oauth2.client.registration.facebook.client-id=123123
 spring.security.oauth2.client.registration.facebook.client-secret=1827381jkasdkjdak
+spring.jpa.hibernate.ddl-auto=none
+spring.flyway.locations=classpath:/db/migration,classpath:/data
