--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <java.melody.version>1.82.0</java.melody.version>
         <test.containers.version>1.14.1</test.containers.version>
         <test.containers.postgresql.version>1.10.6</test.containers.postgresql.version>
+        <query.dsl.version>4.2.2</query.dsl.version>
     </properties>
 
     <dependencies>
@@ -37,6 +38,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-apt</artifactId>
+            <version>${query.dsl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+            <version>${query.dsl.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -175,6 +186,22 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.mysema.maven</groupId>
+                <artifactId>apt-maven-plugin</artifactId>
+                <version>1.1.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/generated-sources/java</outputDirectory>
+                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
