--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,3 +6,4 @@ spring.security.oauth2.client.registration.facebook.client-id=123123
 spring.security.oauth2.client.registration.facebook.client-secret=1827381jkasdkjdak
 spring.jpa.hibernate.ddl-auto=none
 spring.flyway.locations=classpath:/db/migration,classpath:/data
+spring.mail.host=test
