--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
-spring.datasource.url=jdbc:postgresql://asdasdas:5432/nver
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/nver
 spring.datasource.username=root
 spring.datasource.password=root
 
