--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
-spring.datasource.url=jdbc:postgresql://172.30.187.117:5432/nver
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/nver
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -8,7 +8,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.flyway.url=jdbc:postgresql://localhost:5432/nver
 spring.flyway.user=root
 spring.flyway.password=root
 
