add environment viable for db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 server.port=8082
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/nver
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/nver
+spring.datasource.username=${DB_PORT:root}
+spring.datasource.password=${DB_PORT:root}
 
 spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.flyway.user=root
-spring.flyway.password=root
+spring.flyway.user=${DB_PORT:root}
+spring.flyway.password=${DB_PORT:root}
 
 spring.security.oauth2.client.registration.facebook.client-id=255123762534595
 spring.security.oauth2.client.registration.facebook.client-secret=6c073245156ac38d8a21cf4252425ea1
