--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+host.address = ${HOST_NAME:http://localhost:8082}
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/nver
 spring.datasource.username=root
 spring.datasource.password=root
