--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.security.oauth2.client.registration.facebook.client-id=255123762534595
 spring.security.oauth2.client.registration.facebook.client-secret=6c073245156ac38d8a21cf4252425ea1
 spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/api/{action}/oauth2/code/{registrationId}
 
+fileserver.url = http://localhost:8082/file
+fileserver.folder = files
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=info.nver@gmail.com
