--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <test.containers.version>1.14.1</test.containers.version>
         <test.containers.postgresql.version>1.10.6</test.containers.postgresql.version>
         <query.dsl.version>4.2.2</query.dsl.version>
+        <jib.version>2.3.0</jib.version>
     </properties>
 
     <dependencies>
@@ -208,6 +209,16 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>jib-maven-plugin</artifactId>
+            <version>${jib.version}</version>
+                <configuration>
+                    <to>
+                        <image>docker.io/yeranosyans/nver-backend</image>
+                    </to>
+                </configuration>
             </plugin>
         </plugins>
     </build>
