--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
-        run: mvn -B package --file pom.xml -Djib.to.auth.password=${{ secrets.DOCKERHUB_TOKEN }} jib:build
+        run: mvn -B package --file pom.xml -Djib.to.auth.username=yeranosyans -Djib.to.auth.password=${{ secrets.DOCKERHUB_TOKEN }} jib:build
   deploy:
     runs-on: ubuntu-latest
     needs: build
