--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,3 +7,6 @@ spring.security.oauth2.client.registration.facebook.client-secret=1827381jkasdkj
 spring.jpa.hibernate.ddl-auto=none
 spring.flyway.locations=classpath:/db/migration,classpath:/data
 spring.mail.host=test
+
+fileserver.url = http://localhost:8082/file
+fileserver.folder = files
