added missing property in setting

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,4 +9,5 @@ spring.flyway.locations=classpath:/db/migration,classpath:/data
 spring.mail.host=test
 
 fileserver.url = http://localhost:8082/file
+fileserver.root = root
 fileserver.folder = files
