--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,7 @@ jobs:
           CC_TEST_REPORTER_ID: <b0e3ffa6def6506444f1d7c86adf70b27b1a4d1280e5aba5ba09abe3b7c23482>
           JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/java"
         with:
+          coverageCommand: ls
           coverageLocations: ${{github.workspace}}/target/site/jacoco/jacoco.xml:jacoco
   deploy:
     runs-on: ubuntu-latest
