--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Publish code coverage
         uses: paambaati/codeclimate-action@v2.6.0
         env:
-          CC_TEST_REPORTER_ID: <b0e3ffa6def6506444f1d7c86adf70b27b1a4d1280e5aba5ba09abe3b7c23482>
+          CC_TEST_REPORTER_ID: b0e3ffa6def6506444f1d7c86adf70b27b1a4d1280e5aba5ba09abe3b7c23482
           JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/java"
         with:
           coverageCommand: ls
